add Deploy to Vercel

--- a/index.html
+++ b/index.html
@@ -745,6 +745,7 @@
         <li>关注机器人 <a href="https://t.me/msg_sause_bot">MessageBot</a></li>
         <li>发送 <code>/token</code> 获取 token </li>
         <li>Github: <a href="https://github.com/anhao/TgMessage">https://github.com/anhao/TgMessage</a></li>
+        <li><a href="https://vercel.com/new/git/external?repository-url=https%3A%2F%2Fgithub.com%2Fanhao%2FTGMessage"><img src="https://vercel.com/button" alt=""></a></li>
     </ul>
     <h3 id="4-">4) 请求参数:</h3>
     <table>
